--- a/vignettes/Using_secsse.Rmd
+++ b/vignettes/Using_secsse.Rmd
@@ -11,7 +11,7 @@ vignette: >
 
 ## SecSSE introduction
 
-SecSSE is an R package designed for multistate data sets under a concealed state and speciation ('hisse') framework. In this sense, it is parallel to the 'MuSSE' functionality implemented in 'diversitree', but it accounts for finding possible spurious relationships between traits and diversification rates ('false positives', Rabosky & Goldberg 2015) by testing against a 'hidden trait' (Beaulieu et al. 2013), which is responsible for more variation in diversification rates than the trait being investigated. 
+SecSSE is an R package designed for multistate data sets under a concealed state and speciation ('hisse') framework. In this sense, it is parallel to the 'MuSSE' functionality implemented in 'diversitree', but it accounts for finding possible spurious relationships between traits and diversification rates ('false positives', Rabosky & Goldberg 2015) by testing against a 'hidden trait' (Beaulieu et al. 2013), which is responsible for more variation in diversification rates than the trait being investigated.
 
 ## SecSSE input files
 
@@ -22,7 +22,7 @@ rm(list = ls())
 library(secsse)
 ```
 
-Similar to the 'diversitree' (Fitzjohn et al. 2012) and 'hisse' (Beaulieu & O'Meara 2016) packages, SecSSE uses two input files: a rooted, ultrametric tree in nexus format (for conversion of other formats to nexus, we refer to the documentation in package 'ape') and a data file with two columns, the first containing taxa names and the second a numeric code for trait state with a header (usually 0,1,2,3, etc., but notice that 'NA' is a valid code too, if you are not sure what trait state to assign to a taxon). A comma-separated value file (.csv) generated in MsExcel works particularly well. The *.csv file can be loaded into R using the read.csv() function. and should look like this:
+Similar to the 'diversitree' (Fitzjohn et al. 2012) and 'hisse' (Beaulieu & O'Meara 2016) packages, SecSSE uses two input files: a rooted, ultrametric tree in nexus format (for conversion of other formats to nexus, we refer to the documentation in package 'ape') and a data file with two columns, the first containing taxa names and the second a numeric code for trait state with a header (usually 0,1,2,3, etc., but notice that 'NA' is a valid code too, if you are not sure what trait state to assign to a taxon). A comma-separated value file (.csv) generated in MsExcel works particularly well. The \*.csv file can be loaded into R using the read.csv() function. and should look like this:
 
 ```{r}
 data(traitinfo)
@@ -30,7 +30,7 @@ trait <- traitinfo
 tail(trait)
 ```
 
-This data set (here we see only the bottom lines of the data frame) has three character states labeled as 1, 2 and 3. Notice that unless you want to assign ambiguity to some but not all states (see below), the third column in your data file should be empty. Ambiguity about trait state (you are not sure which trait state to assign a taxon too, or you have no data on trait state for a particular taxon), can be assigned using 'NA'. SecSSE handles 'NA' differently from a full trait state, in that it assigns probabilities to all trait states for a taxon demarcated with 'NA'.  
+This data set (here we see only the bottom lines of the data frame) has three character states labeled as 1, 2 and 3. Notice that unless you want to assign ambiguity to some but not all states (see below), the third column in your data file should be empty. Ambiguity about trait state (you are not sure which trait state to assign a taxon too, or you have no data on trait state for a particular taxon), can be assigned using 'NA'. SecSSE handles 'NA' differently from a full trait state, in that it assigns probabilities to all trait states for a taxon demarcated with 'NA'.
 
 The second object we need is an ultrametric phylogenetic tree, that is rooted and has labeled tips. One can load it in R by using read.nexus(). In our example we load a prepared phylogeny named "phylo_Vign":
 
@@ -60,8 +60,7 @@ mismat <- name.check(phylo_Vign,trait)
 
 If you have taxa in your tree file that do not appear in your trait file, it is worth adding them with value 'NA' for trait state. After you are done properly setting up your data, you can proceed to setting parameters and constraints.
 
-##Parameter settings and constraints
-SecSSE allows for the implementation of different models of evolution, and just as in 'diversitree' and 'hisse', parameters can be fixed at certain values (if prior information is known on particular values) or made to be equal to each other. Initial parameter values can also be supplied, to start off the maximum likelihood search with. The main function in the SecSSE package is secsse_ml, which performs a maximum likelihood search and uses as input a set of speciation rate parameters (lambda), a set of extinction rate parameters (mu), and a matrix composed of transition rates (q) between the various states. The identifiers of the parameters are broadly the same as those used in 'hisse', and numbers indicate examined state, whereas letters denote concealed state, 2A for example being in examined state 2, and concealed state A. 
+##Parameter settings and constraints SecSSE allows for the implementation of different models of evolution, and just as in 'diversitree' and 'hisse', parameters can be fixed at certain values (if prior information is known on particular values) or made to be equal to each other. Initial parameter values can also be supplied, to start off the maximum likelihood search with. The main function in the SecSSE package is secsse_ml, which performs a maximum likelihood search and uses as input a set of speciation rate parameters (lambda), a set of extinction rate parameters (mu), and a matrix composed of transition rates (q) between the various states. The identifiers of the parameters are broadly the same as those used in 'hisse', and numbers indicate examined state, whereas letters denote concealed state, 2A for example being in examined state 2, and concealed state A.
 
 Both the speciation and extinction parameters are supplied as vectors, and the transition rates are supplied as a matrix, joined in a list.
 
@@ -73,9 +72,9 @@ TRAITS: user-supplied trait data of class 'data frame' (see above)
 
 NUM_CONCEALED_STATES: In general, we recommend this value to be equal to the number of examined states in your data set (that way they have the same parametric complexity), however , this may or may not be computationally tractable depending on the size of the tree. An alternative is to set this value to 3, an advantage of having just three concealed states is that data interpretation gets a lot easier. Notice this value needs to be specified also under id_paramPos.
 
-IDPARSLIST: a list of parameters to be supplied to the function. This list contains information on the number of parameters, as well as on how parameters interact. E.g., if we would like all speciation rates to behave similarly or if we want two transition rates to be identical, we can set this up here. Setting the parameters for this argument is the bulk of the work for setting up the model, especially when the number of states is relatively high. 
+IDPARSLIST: a list of parameters to be supplied to the function. This list contains information on the number of parameters, as well as on how parameters interact. E.g., if we would like all speciation rates to behave similarly or if we want two transition rates to be identical, we can set this up here. Setting the parameters for this argument is the bulk of the work for setting up the model, especially when the number of states is relatively high.
 
-The following is a visual example of the input parameters of SecSSE, this list is composed of three elements, one containing the number of parameters for lambda, one for mu, and a matrix of transition rates. Notice that this list contains the set-up for a model in which all parameters are free, every parameter having a unique value, indicating that each parameter is optimized separately. The diagonal of the q matrix is always set to NA, because transitions within a state are not possible. The dimensions of the transition matrix follow the following rule: (3n)2, where n is the number of observed states. Needless to say, we have not tried running SecSSE with n>10, both for computational and practical reasons, and neither should you probably, especially in combination with large trees.
+The following is a visual example of the input parameters of SecSSE, this list is composed of three elements, one containing the number of parameters for lambda, one for mu, and a matrix of transition rates. Notice that this list contains the set-up for a model in which all parameters are free, every parameter having a unique value, indicating that each parameter is optimized separately. The diagonal of the q matrix is always set to NA, because transitions within a state are not possible. The dimensions of the transition matrix follow the following rule: (3n)2, where n is the number of observed states. Needless to say, we have not tried running SecSSE with n\>10, both for computational and practical reasons, and neither should you probably, especially in combination with large trees.
 
 ```{r}
 #First we have to define idparslist, as well as, again, a user-specified value for the number of concealed states to be assessed by SecSSE.
@@ -105,7 +104,7 @@ There are also several things we can do to improve the rate matrix and reduce it
 diag(idparslist[[3]]) <- NA
 ```
 
-Additionally, we would like to set all dual transitions (so for example from state 0 to 1 AND from concealed state A to B) to 0, as these are unlikely to occur. It is a bit of a matter of personal preference whether or not you should do this, but we follow Beaulieu & O'Meara (2016) here and set dual transitions to zero. One good reason for doing so is simply to reduce computational burden.  
+Additionally, we would like to set all dual transitions (so for example from state 0 to 1 AND from concealed state A to B) to 0, as these are unlikely to occur. It is a bit of a matter of personal preference whether or not you should do this, but we follow Beaulieu & O'Meara (2016) here and set dual transitions to zero. One good reason for doing so is simply to reduce computational burden.
 
 ```{r}
 idparslist[[3]][1,c(5,6,8,9)] <- 0
@@ -178,19 +177,17 @@ idparslist[[3]][9,c(1,2,4,5)] <- 0
 diag(idparslist[[3]]) <- NA
 ```
 
-This yields the following data setup: 
+This yields the following data setup:
 
 ```{r}
 idparslist
 ```
-
 
 INITPARSOPT: user-supplied values of parameters, a vector of values of lambda, mu, and q that should agree in number with the number of parameters specified in the model. If values are known beforehand, they can be specified as follows for the case of the above defined parameter set, where there are 5 lambda's (two equal), 6 mu's (all free), and q's (all free, but no dual transitions):
 
 ```{r}
 initparsopt <- c(rep(1.2,9), rep(0.1,9), rep(0.25,36))
 ```
-
 
 IDPARSOPT: the id's of the parameters we want to optimize (versus those that are to be fixed). The id's should correspond to those specified under idparslist. For example, if we take our previously defined idparslist:
 
@@ -253,6 +250,7 @@ idparsfix <- c(0,10)
 Notice that if dual transitions were set to zero under idparslist, we should do this here too.
 
 PARSFIX: specifies at which values the parameters identified under idparsfix should be set. Should have the same number of entries as idparsfix (same order too). In this example, the first zero means that all those entries in idparslist with ID 0 will be fixed to zero. The second zero means that all the entries in idparslist with ID 10, will be fixed to 0.0001.
+
 ```{r}
 parsfix <- c(0,0.0001)
 ```
@@ -261,17 +259,18 @@ One can also estimate initial lambda and mu values from the tree using a simple 
 
 ```{r}
 library(DDD)
-startingpoint <- bd_ML(brts = ape::branching.times(phylo_Vign))
+startingpoint <- DDD::bd_ML(brts = ape::branching.times(phylo_Vign))
 intGuessLamba <- startingpoint$lambda0
 intGuessMu <- startingpoint$mu0
 #Make sure that the dimensions of initparsopt agree with those of idparslist and idparsopt, especially in the case of the initial guesses for rates supplied to the Q matrix. Rules of thumb are that if n=number of examined states, both intGuessLamba and intGuessMu should be replicated 2n times, and (intGuessLamba/5) should be replicated (2n)2/2 times:
 initparsopt <- c(rep(intGuessLamba,9), rep((intGuessLamba/5),1))
 ```
-COND: conditioning on the state of the root. Set to "maddison_cond" if you want conditioning as done in other -SSE packages, or "proper_cond" if you want to use our new improved conditioning. 
 
-root_state_weight: SecSSe offers to methods to weigh the probabilities of states at the root:"proper_weights" and "maddison_weights". In the accompanying paper you can read the differences between them. 
+COND: conditioning on the state of the root. Set to "maddison_cond" if you want conditioning as done in other -SSE packages, or "proper_cond" if you want to use our new improved conditioning.
 
-SAMPLING_FRACTION: include a sampling fraction. Sampling.f always has as many elements as there are examined states, so a SecSSE analysis with 3 states could have the following sampling_fraction = c(0.5,0.25,0.75), in which half of taxa in state 1 are sampled, a quarter in state two, and three quarters in state three. If 100% of known taxa in each state are sampled, sampling_fraction=c(1,1,1). If only an overall value is known (for example, we know we sampled 80% of all taxa, but we do not know how they are distributed across states), we assign this value to each state: sampling_fraction = c(0.8,0.8,0.8). Sampling.f is always placed after the 'cond' statement. 
+root_state_weight: SecSSe offers to methods to weigh the probabilities of states at the root:"proper_weights" and "maddison_weights". In the accompanying paper you can read the differences between them.
+
+SAMPLING_FRACTION: include a sampling fraction. Sampling.f always has as many elements as there are examined states, so a SecSSE analysis with 3 states could have the following sampling_fraction = c(0.5,0.25,0.75), in which half of taxa in state 1 are sampled, a quarter in state two, and three quarters in state three. If 100% of known taxa in each state are sampled, sampling_fraction=c(1,1,1). If only an overall value is known (for example, we know we sampled 80% of all taxa, but we do not know how they are distributed across states), we assign this value to each state: sampling_fraction = c(0.8,0.8,0.8). Sampling.f is always placed after the 'cond' statement.
 
 TOL: basically, a range of values between which samples in the ML chain will be accepted or not. Typically, the value of tol = c(1e-04, 1e-05, 1e-07) is generally best.
 
@@ -279,32 +278,59 @@ METHODE: method for integration of likelihood values along branches, generally w
 
 OPTIMMETHOD: optimization method, generally we recommend "simplex".
 
-RUN_PARALLEL: this specifies whether or not to use the SecSSE tree-breaking function. If you have a large tree, this tree can be broken into two pieces so that computation of likelihood along branches can take place simultaneously on the two pieces, yielding a gain in computation time. The size of the two pieces is established by SecSSE, and depends on how balanced the tree is; a better-balanced tree yields two pieces of relatively equal size and results in relatively larger gain in computation time. With large trees (say, n>1000), it is our experience that even two chunks of tree of unequal size yield a time advantage. Needless to say, your computational setup needs to be able to accommodate parallel computation (multiple cores, nodes).
+RUN_PARALLEL: this specifies whether or not to use the SecSSE tree-breaking function. If you have a large tree, this tree can be broken into two pieces so that computation of likelihood along branches can take place simultaneously on the two pieces, yielding a gain in computation time. The size of the two pieces is established by SecSSE, and depends on how balanced the tree is; a better-balanced tree yields two pieces of relatively equal size and results in relatively larger gain in computation time. With large trees (say, n\>1000), it is our experience that even two chunks of tree of unequal size yield a time advantage. Needless to say, your computational setup needs to be able to accommodate parallel computation (multiple cores, nodes).
 
 ##Running the likelihood function
 
 After we have defined all of the necessary parameters for running secsse_ml, we can start running our analysis:
 
 ```{r}
-#secsse_ml(phylo_Vign,traits, num_concealed_states=3, idparslist, idparsopt, initparsopt, idparsfix, parsfix, cond="maddison_cond",root_state_weight = "maddison_weights", tol = c(1e-04, 1e-05, 1e-07), sampling_fraction=c(1,1,1), maxiter = 1000 * round((1.25)^length(idparsopt)), use_fortran=TRUE,methode="ode45", optimmethod = "simplex", num_cycles = 1, run_parallel=FALSE)
+secsse_ml(phylo_Vign,
+          traits, 
+          num_concealed_states = 3, 
+          idparslist, 
+          idparsopt, 
+          initparsopt, 
+          idparsfix, 
+          parsfix, 
+          cond = "maddison_cond",
+          root_state_weight = "maddison_weights", 
+          tol = c(1e-04, 1e-05, 1e-07), 
+          sampling_fraction = c(1, 1, 1), 
+          optimmethod = "simplex", 
+          num_cycles = 1)
 ```
 
 We can save output to an R data file, for example, here called output.RDS:
 
 ```{r}
-#out<-secsse_ml(phylo_Vign,traits, num_concealed_states=3, idparslist, idparsopt, initparsopt, idparsfix, parsfix, cond="maddison_cond",root_state_weight = "maddison_weights", sampling_fraction=c(1,1,1), tol = c(1e-04, 1e-05, 1e-07), maxiter = 1000 * round((1.25)^length(idparsopt)), use_fortran=TRUE,methode="ode45", optimmethod = "simplex", num_cycles = 1, run_parallel=FALSE)
-#saveRDS(out, file="output.RDS")
+out<-secsse_ml(phylo_Vign,
+               traits, 
+               num_concealed_states = 3, 
+               idparslist, 
+               idparsopt, 
+               initparsopt, 
+               idparsfix, 
+               parsfix, 
+               cond = "maddison_cond",
+               root_state_weight = "maddison_weights", 
+               sampling_fraction = c(1, 1, 1), 
+               tol = c(1e-04, 1e-05, 1e-07), 
+               optimmethod = "simplex",
+               num_cycles = 1)
+saveRDS(out, file="output.RDS")
 ```
 
 Later on, we can retrieve the data in this file, simply by entering:
 
 ```{r}
-#readRDS("output.RDS")
+readRDS("output.RDS")
 ```
 
 The following is sample output, with two concealed states, notice in this case all transition rates, including dual rates, were set to the fixed value of 0.01:
 
-#############################################
+############################################# 
+
 ```{r}
 #$MLpars[[1]]
 #          1A           2A           3A           1B           2B           3B 
@@ -327,20 +353,23 @@ The following is sample output, with two concealed states, notice in this case a
 #$ML
 #[1] -848.0895
 ```
-#############################################
 
-The maximum likelihood value at the bottom of the output can be used in model comparison. 
+############################################# 
 
-##SecSSE tool to facilitate composition of q matrices
-Often, q matrices can get quite large and complicated, the more states you are analyzing. We have devised a tool to more easily put together q matrices. This tool starts from the so-called 'masterBlock', the basic matrix in which we only find information on transitions between examined states. The information contained in this 'masterBlock' is then automatically mimicked for inclusion in the full matrix, to ensure that the same complexity in examined state transitions is also found in concealed states. The use of the 'masterBlock' implies that you are using the same number of concealed as examined states. Here, we are generating a 'masterBlock' that yields a 3-state q matrix.
+The maximum likelihood value at the bottom of the output can be used in model comparison.
+
+##SecSSE tool to facilitate composition of q matrices Often, q matrices can get quite large and complicated, the more states you are analyzing. We have devised a tool to more easily put together q matrices. This tool starts from the so-called 'masterBlock', the basic matrix in which we only find information on transitions between examined states. The information contained in this 'masterBlock' is then automatically mimicked for inclusion in the full matrix, to ensure that the same complexity in examined state transitions is also found in concealed states. The use of the 'masterBlock' implies that you are using the same number of concealed as examined states. Here, we are generating a 'masterBlock' that yields a 3-state q matrix.
 
 The 'masterBlock' can be declared as follows:
+
 ```{r}
 masterBlock<-matrix(99,ncol=3,nrow=3,byrow=T) 
 ```
+
 in which '99' is an example value you can use to populate the matrix at first, to be replaced by values you specify. If you make this value conspicuously different from others, you can ensure that you are not skipping the specification of values, as any non-specified rates will take this value. 'Ncol' and 'nrow' will need to reflect the number of states you are analyzing.
 
 We first declare all values on the diagonal to be 'NA', then we specify values for the 'masterBlock'. The values have a row and column indicator, so that e.g. '[2,7]' refers to position 7 in row 2, or to a transition from 2A to 7A more specifically.
+
 ```{r}
 diag(masterBlock) <- NA
 masterBlock[1,2] <- 6
@@ -353,44 +382,57 @@ masterBlock[3,1] <- 10
 masterBlock[3,2] <- 11
 
 ```
-After completing the declaration of the 'masterBlock', we will need to specify whether or not we want the variation in examined states to be exactly the same as in the concealed state (so that e.g. the transition 1A->3A takes the same value as 5A->5C), or if we want the concealed state to have additional variation to account for type I error in transition rates (so that the total amount of transition parameters between concealed states is the same as between examined states, but the values are different). This is done by:
+
+After completing the declaration of the 'masterBlock', we will need to specify whether or not we want the variation in examined states to be exactly the same as in the concealed state (so that e.g. the transition 1A-\>3A takes the same value as 5A-\>5C), or if we want the concealed state to have additional variation to account for type I error in transition rates (so that the total amount of transition parameters between concealed states is the same as between examined states, but the values are different). This is done by:
+
 ```{r}
 diff.conceal <- FALSE
 ```
+
 Finally, we need to make sure the 'masterBlock' is used as a baseline for building the transition matrix in IDPARSLIST:
+
 ```{r}
 myQ<-q_doubletrans(traits,masterBlock,diff.conceal)
 idparslist[[3]] <- myQ
 ```
+
 Which makes our final q matrix look as follows:
+
 ```{r}
 idparslist[[3]]
 ```
+
 Matching the amount of variation in rates between the concealed states, yields the following:
+
 ```{r}
 diff.conceal <- TRUE
 myQ <- q_doubletrans(traits,masterBlock,diff.conceal)
 idparslist[[3]] <- myQ
 idparslist[[3]]
 ```
+
 Note that in this case, the number of transition rate parameters doubles compared to the previous example, a change that will need to be applied also to IDPARSOPT and IDPARSFIX.
 
-##SecSSE function to reduce number of transition rate parameters by including multiplicative factors
-SecSSE has the capability of reducing computational burden by decreasing the number of transition rate parameters through the inclusion of multiplicative factors. Factors can also be used to disentangle complex patterns of trait-dependent diversification when multiple traits are included.
+##SecSSE function to reduce number of transition rate parameters by including multiplicative factors SecSSE has the capability of reducing computational burden by decreasing the number of transition rate parameters through the inclusion of multiplicative factors. Factors can also be used to disentangle complex patterns of trait-dependent diversification when multiple traits are included.
 
-Suppose you are running an analysis with a large number of transition rate parameters, but you suspect there are linear relationships between some of them. If the transition between lobed (L) and palmate (P) feet is twice as infrequent as that between palmate and semi-palmate (S) feet, and could say that P->L is 2(P->S). The reverse would also be true: L->P is 2(S->P). By applying these factors, we are reducing the transition matrix from a 6 parameters to 4, and in models where transitions between concealed states are allowed, we are reducing our parameters from 12 to 8. Of course, the inclusion of these factors comes with a loss of resolution, and is therefore best done with parameters where exact estimation is not essential. 
+Suppose you are running an analysis with a large number of transition rate parameters, but you suspect there are linear relationships between some of them. If the transition between lobed (L) and palmate (P) feet is twice as infrequent as that between palmate and semi-palmate (S) feet, and could say that P-\>L is 2(P-\>S). The reverse would also be true: L-\>P is 2(S-\>P). By applying these factors, we are reducing the transition matrix from a 6 parameters to 4, and in models where transitions between concealed states are allowed, we are reducing our parameters from 12 to 8. Of course, the inclusion of these factors comes with a loss of resolution, and is therefore best done with parameters where exact estimation is not essential.
 
 In SecSSE, the factors are represented in a function separate from secsse_ml, and the setup of this function is very similar to secsse_ml, but requires the addition of two parameters, SHAREFACTORS and INITFACTORS.
 
-SHAREFACTORS: these are the identifiers of the factors you want to specify. In the above example, we have two factors, one governing transitions from P->S and one from S->P. Transitions in opposite directions are better not fixed to the same multiplicative factor, so that at least two are needed here. In this case these are specified as follows:
+SHAREFACTORS: these are the identifiers of the factors you want to specify. In the above example, we have two factors, one governing transitions from P-\>S and one from S-\>P. Transitions in opposite directions are better not fixed to the same multiplicative factor, so that at least two are needed here. In this case these are specified as follows:
+
 ```{r}
 #shareFactors <- c(.1,.2)
 ```
+
 INITFACTORS: Since these shared factors need initial parameter estimates, just as other transition parameters in the model do, we need to specify these. The initial guesses are best set to 1, so they behave similar to the parameters they are 'tied' to, unless we have very good evidence (e.g. from a previous run) that these are bigger or smaller:
+
 ```{r}
 #initFactors <- c(1,1)
 ```
-Aside from setting these two parameters, we need to specify in our rate matrix which rate parameters we want to be governed by which factors. Imagine we have a 3-state matrix, where 1 refers to lobed feet, 2 to semi-palmate and 3 to palmate: 
+
+Aside from setting these two parameters, we need to specify in our rate matrix which rate parameters we want to be governed by which factors. Imagine we have a 3-state matrix, where 1 refers to lobed feet, 2 to semi-palmate and 3 to palmate:
+
 ```{r}
 # diag(masterBlock) <- NA
 # masterBlock[1,2] <- 6
@@ -402,15 +444,16 @@ Aside from setting these two parameters, we need to specify in our rate matrix w
 # masterBlock[3,1] <- 7.2  #factor 2: palmate to lobed
 # masterBlock[3,2] <- 9
 ```
-Finally, we run the function secsse_ml_struc instead of secsse_ml, and make sure that both new parameters are included. 
+
+Finally, we run the function secsse_ml_struc instead of secsse_ml, and make sure that both new parameters are included.
+
 ```{r}
 #secsse_ml_struc(phylo_Vign..., shareFactors, initFactors)
 ```
 
-Multiplicative factors can also be used in connection with lambdas or mus, in the same way as they are used for transition rates. Note that in such case the factors will need to be unique across the entire dataset, so that both speciation- and transition-related factors have unique values for shareFactors. They can also be used to disentangle complex patterns of diversification when multiple traits are taken into account. Assume that aside from foot shape (the above example), we are also looking at the presence or absence of a spur, and we would like to know how the two traits interact to influence diversification. In such a case, presence or absence of spur can be used as a multiplicative factor, and models can be run where presence or absence is coded as the same multiplicative factor (.1), and where presence or absence are coded as two different factors (.1,.2). 
+Multiplicative factors can also be used in connection with lambdas or mus, in the same way as they are used for transition rates. Note that in such case the factors will need to be unique across the entire dataset, so that both speciation- and transition-related factors have unique values for shareFactors. They can also be used to disentangle complex patterns of diversification when multiple traits are taken into account. Assume that aside from foot shape (the above example), we are also looking at the presence or absence of a spur, and we would like to know how the two traits interact to influence diversification. In such a case, presence or absence of spur can be used as a multiplicative factor, and models can be run where presence or absence is coded as the same multiplicative factor (.1), and where presence or absence are coded as two different factors (.1,.2).
 
-##Note on assigning ambiguity to taxon trait states
-If the user wishes to assign a taxon to multiple trait states, because he/she is unsure which state best describes the taxon, he/she can use 'NA'. 'NA' is used when there is no information on possible state at all; for example when a state was not measured or a taxon is unavailable for inspection. 'NA' means a taxon is equally likely to pertain to any state. In case the user does have some information, for example if a taxon can pertain to multiple states, or if there is uncertainty regarding state but one or multiple states can with certainty be excluded, SecSSE offers flexibility to handle ambiguity. In this case, the user only needs to supply a trait file, with at least four columns, one for the taxon name, and three for trait state. Below, we show an example  of what the trait info should be like (the column with species' names has been removed).If a taxon may pertain to trait state 1 or 3, but not to 2, the three columns should have at least the values 1 and a 3, but never 2 (species in the third row). On the other hand, the species in the fifth row can pertain to all states: the first column would have a 1, the second a 2, the third a 3 (although if you only have this type of ambiguity, it is easier to assign 'NA' and use a single-column data file).  
+##Note on assigning ambiguity to taxon trait states If the user wishes to assign a taxon to multiple trait states, because he/she is unsure which state best describes the taxon, he/she can use 'NA'. 'NA' is used when there is no information on possible state at all; for example when a state was not measured or a taxon is unavailable for inspection. 'NA' means a taxon is equally likely to pertain to any state. In case the user does have some information, for example if a taxon can pertain to multiple states, or if there is uncertainty regarding state but one or multiple states can with certainty be excluded, SecSSE offers flexibility to handle ambiguity. In this case, the user only needs to supply a trait file, with at least four columns, one for the taxon name, and three for trait state. Below, we show an example of what the trait info should be like (the column with species' names has been removed).If a taxon may pertain to trait state 1 or 3, but not to 2, the three columns should have at least the values 1 and a 3, but never 2 (species in the third row). On the other hand, the species in the fifth row can pertain to all states: the first column would have a 1, the second a 2, the third a 3 (although if you only have this type of ambiguity, it is easier to assign 'NA' and use a single-column data file).
 
 ```{r}
 #       traits traits traits
@@ -421,11 +464,9 @@ If the user wishes to assign a taxon to multiple trait states, because he/she is
 # [5,]      1      2      3
 ```
 
-
 ##Do you feel SecSSE? If not, please feel free to e-mail the authors. For help with this R package only.
 
-##References
-Beaulieu, J. M., O'meara, B. C., & Donoghue, M. J. (2013). Identifying hidden rate changes in the evolution of a binary morphological character: the evolution of plant habit in campanulid angiosperms. Systematic biology, 62(5), 725-737.
+##References Beaulieu, J. M., O'meara, B. C., & Donoghue, M. J. (2013). Identifying hidden rate changes in the evolution of a binary morphological character: the evolution of plant habit in campanulid angiosperms. Systematic biology, 62(5), 725-737.
 
 Beaulieu, J. M., & O'Meara, B. C. (2016). Detecting hidden diversification shifts in models of trait-dependent speciation and extinction. Systematic biology, 65(4), 583-601.
 
@@ -434,4 +475,3 @@ FitzJohn, R. G. (2012). Diversitree: comparative phylogenetic analyses of divers
 Harmon, L. J., Weir, J. T., Brock, C. D., Glor, R. E., & Challenger, W. (2008). GEIGER: investigating evolutionary radiations. Bioinformatics, 24(1), 129-131.
 
 Rabosky, D. L., & Goldberg, E. E. (2015). Model inadequacy and mistaken inferences of trait-dependent speciation. Systematic Biology, 64(2), 340-355.
-
