--- a/vignettes/plotting_states.Rmd
+++ b/vignettes/plotting_states.Rmd
@@ -1,12 +1,14 @@
 ---
 title: "plot demonstration"
 author: "Thijs Janzen"
-date: "2023-01-13"
+date: "2023-01-20"
 output: html_document
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(secsse)
+library(tidyverse)
 ```
 
 ## Plotting ancestral states 
@@ -95,3 +97,63 @@ secsse::plot_state_exact(parameters = params,
                  steps = 100,
                  prob_func = helper_function)
 ```
+
+# Using CLA secsse
+
+For CLA secsse, a similar function is available, which works in the same way. Borrowing from the example for cla_secsse_loglik, we first prepare our parameters:
+```{r cla secsse}
+set.seed(13)
+phylotree <- ape::rcoal(12, tip.label = 1:12)
+traits <- sample(c(0, 1, 2), ape::Ntip(phylotree), replace = TRUE)
+num_concealed_states <- 3
+sampling_fraction <- c(1,1,1)
+phy <- phylotree
+# the idparlist for a ETD model (dual state inheritance model of evolution)
+# would be set like this:
+idparlist <- secsse::cla_id_paramPos(traits,num_concealed_states)
+lambd_and_modeSpe <- idparlist$lambdas
+lambd_and_modeSpe[1,] <- c(1,1,1,2,2,2,3,3,3)
+idparlist[[1]] <- lambd_and_modeSpe
+idparlist[[2]][] <- 0
+masterBlock <- matrix(4,ncol = 3, nrow = 3, byrow = TRUE)
+diag(masterBlock) <- NA
+idparlist[[3]] <- q_doubletrans(traits, masterBlock, diff.conceal = FALSE)
+# Now, internally, clasecsse sorts the lambda matrices, so they look like
+#  a list with 9 matrices, corresponding to the 9 states
+# (0A,1A,2A,0B, etc)
+
+parameter <- idparlist
+lambda_and_modeSpe <- parameter$lambdas
+lambda_and_modeSpe[1,] <- c(0.2,0.2,0.2,0.4,0.4,0.4,0.01,0.01,0.01)
+parameter[[1]] <- prepare_full_lambdas(traits,num_concealed_states,
+lambda_and_modeSpe)
+parameter[[2]] <- rep(0,9)
+masterBlock <- matrix(0.07, ncol = 3, nrow = 3, byrow = TRUE)
+diag(masterBlock) <- NA
+parameter[[3]] <- q_doubletrans(traits, masterBlock, diff.conceal = FALSE)
+```
+
+Here, we have 9 different states (3 observed states, and 3 hidden states), 
+ordered regularly, e.g.: 0A, 1A, 2A, 0B, 1B, 2B, 0C, 1C, 2C. To observe the
+change in state 0, we formulate a helper function, noticing that the first
+9 states are the extinction rates:
+```{r helper function cla}
+helper_function <- function(x) {
+  return(sum(x[c(10, 13, 16)]) / sum(x)) # normalized by total sum, just in case.
+}
+```
+
+And then we use these for plotting:
+```{r plot cla}
+secsse::plot_state_exact_cla(parameters = parameter,
+                             focal_tree = phy,
+                             traits = traits,
+                             num_concealed_states = 3,
+                             sampling_fraction = sampling_fraction,
+                             cond = 'maddison_cond',
+                             root_state_weight = 'maddison_weights',
+                             is_complete_tree = FALSE,
+                             prob_func = helper_function,
+                             steps = 10)
+```
+
