--- a/vignettes/plotting_states.Rmd
+++ b/vignettes/plotting_states.Rmd
@@ -11,6 +11,8 @@ vignette: >
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(fig.width = 6)
+knitr::opts_chunk$set(fig.height = 6)
 library(secsse)
 ```
 
