--- a/vignettes/setting_up_secsse.Rmd
+++ b/vignettes/setting_up_secsse.Rmd
@@ -125,7 +125,7 @@ param_posit[[1]] <- lambda_matrices
 param_posit[[2]] <- mus
 param_posit[[3]] <- trans_matrix
 
-initpars <- runif(n = max(trans_matrix, na.rm = TRUE), 0, 1)
+initpars <- rexp(n = max(trans_matrix, na.rm = TRUE), 10)
 
 answ <- secsse::cla_secsse_ml(phy = focal_tree,
                               traits = sim_traits,
@@ -179,7 +179,7 @@ fit_model <- function(tree, traits, model) {
   
   max_indicator <- max(trans_matrix, na.rm = TRUE)
   
-  initpars <- runif(n = max_indicator, 0, 1)
+  initpars <- rexp(n = max_indicator, 10)
   testthat::expect_output( # suppress output
   answ <- secsse::cla_secsse_ml(phy = focal_tree,
                                 traits = traits,
